<resources>
    <string name="app_name" align="center">OODIET</string>
    <string name="account_name">NAMA AKUN</string>
    <string name="password">PASSWORD</string>
    <string name="password_hint">**************</string>
    <string name="forgot_your_login_info">LUPA PASSWORD?</string>
    <string name="sign_in">LOGIN</string>
    <string name="remember_my_password">REMEMBER MY PASSWORD</string>
    <string name="username">Username</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">EMAIL</string>
    <string name="create_account">BUAT AKUN</string>
    <string name="email_hint">email@example.com</string>
    <string name="reset_senha">RESET EMAIL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Botao_proximo" />
    <string name="Botton_proximo">Próximo</string>
    <string name="beranda">Hi!Welcome to Oodiet \nHow are you today? \nLets start your day \nwith exercise and healthy food \nBe Active, Be Healty</string>
    <string name="dieta1" align="center">

    </string>
    <string name="dieta2" align="center">
    </string>
    <string name="title_activity_menu_utama">MenuUtama</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Workout</string>
    <string name="title_notifications">Recipe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="resep1">
        <br>BAHAN BAHAN UNTUK SALMON SALAD WITH EGG FOR A HEALTHY BREAKFAST\n</br>
        <br>1. Ambil fillet Salmon\n</br>
        <br>2. Ambil Sayuran salad organik (sy pakai 2 jenis sayuran)\n</br>
        <br>3. Ambil Tomat cherry\n</br>
        <br>4. Perlu Telur\n</br>
        <br>5. Ambil Garlic powder\n</br>
        <br>6. Perlu Lemon\n</br>
        <br>7. Perlu Garam\n</br>
        <br>8. Ambil Lada\n</br>
        <br>9. Siapkan Margarin\n</br>
        <br>10. Perlu Kewpie thousand island\n</br>
        <br>11. Perlu iris Jeruk sunkis\n</br>
        <br>12. Perlu Nori (rumout laut) bubuk\n</br>
        <br>\n</br>
        <br>INSTRUKSI MEMBUAT SALMON SALAD WITH EGG FOR A HEALTHY BREAKFAST\n</br>
        <br>1. Cuci bersih sayuran organic, siram air es, tiriskan.\n</br>
        <br>2. Cuci bersih tomat cherry belah dua (kalau agak besar)\n</br>
        <br>3. Rebus telur lalu belah dua.\n</br>
        <br>4. Perciki salmon dengan jeruk lemon, beri garam, lada secukupnya, tambahkan margarin, aduk rata, marinasi kurleb 15 menit.\n</br>
        <br>5. Panggang pd teflon salmon yg telah dimarinasi tadi (tanpa minyak/margarin) hingga tingkat kematangan yg disukai.\n</br>
        <br>6. Tata pada wadah bekal, sayuran organik, potongan tomat cherry, tuang kewpie thousand islang atau kewpie wijen secukupnya, lalu tata salmon dan telur diatasnya.\n</br>
        <br>7. Taburi nori bubuk diatas telur utk tambahan rasa gurih jika suka.\n</br>
        <br>8. Selipkan irisan jeruk sunkis utk penutup sarapan penghilang aroma amis pd mulut sehabis makan salmon</br>
    </string>
    <string name="resep2">
        <br>Bahan\n</br>
        <br>1. 2 buah alpukat, buang biji, kupas\n</br>
        <br>2. 2 buah pir hijau, belah 2, buang biji\n</br>
        <br>3. 2 buah apel granny smith, buang biji\n</br>
        <br>4. 2 buah kiwi, kupas, belah 2\n</br>
        <br>5. 1 buah timun jepang, serut tipis panjang\n</br>
        <br>6. 30 g micro greens, cuci bersih\n</br>
        <br>7. 50 g baby spinach, cuci bersih\n</br>
        <br>8. 50 arugula, cuci bersih\n</br>
        <br>\n</br>
        <br>Lime Sesame Dressing\n</br>
        <br>1. 2 sdt air jeruk nipisCek Promo\n</br>
        <br>2. 1 sdt wijen hitam sangrai\n</br>
        <br>3. 2 sdm minyak zaitun\n</br>
        <br>4. 4 sdm madu\n</br>
        <br>\n</br>
        <br>Cara Membuat\n</br>
        <br>1. Iris melintang tipis alpukat, iris juring pir hijau. Iris tipis apel, iris juring kiwi. Sisihkan.\n</br>
        <br>2. Lime sesame dressing: Masukkan semua bahan dressing ke dalam jar/stoples bertutup rapat. Kocok hingga rata.\n</br>
        <br>3. Susun buah dan sayur dalam wadah saji, tuangi dengan dressing. Sajikan segera.</br>
    </string>
    <string name="resep3">
        <br> Bahan-bahan:\n</br>
        <br>1. 1 buah alpukat yang sudah dikupas dan dibuang bijinya\n</br>
        <br>2. 2 sendok makan daun ketumbar atau seledri cincang\n</br>
        <br>3. Setengah jeruk nipis peras\n</br>
        <br>4. Setengah sendok teh cabai bubuk (chili flakes)\n</br>
        <br>5. Garam dan merica\n</br>
        <br>6. 2 lembar roti\n</br>
        <br>7. 2 telur (orak-arik, rebus, atau ceplok, sesuai selera).\n</br>
        <br>\n</br>
        <br>Cara bikin avocado toast dengan telur:\n</br>
        <br>1. Panggang 2 roti hingga berwarna keemasan dan renyah\n</br>
        <br>2. Haluskan alpukat, lalu campur daun ketumbar atau seledri, perasan jeruk nipis, garam dan merica. Oleskan sebanyak setengah di atas roti panggang, lalu letakkan telur yang sudah dimasak.\n</br>
    </string>
    <string name="resep4">
        <br>Bahan smoothie:\n</br>
        <br>Frozen mangos + frozen bananas + kacang almond + pok coy + air kelapa muda (secukupnya buat nge-blend pok choy).\n</br>
        <br>\n</br>
        <br>Bahan topping (optional, sesuai selera hati):\n</br>
        <br>Irisan apel merah + dried cranberries + goji berries + chia seed + almond.\n</br>
        <br>\n</br>
        <br>Cara membuat:\n</br>
        <br>1. Masukkan irisan pok coy + air kelapa ke blender, proses sampe pok coy halus.\n</br>
        <br>2. Tambahkan almond ke blender, proses sampe halus.\n</br>
        <br>3. Tambahkan pisang dan mangga beku ke blender, proses sampe halus.\n</br>
        <br>4. Pindahkan ke mangkuk saji lalu tambahkan topping. Siap disantap!\n</br>
    </string>
    <string name="resep5">
        <br>Bahan:\n</br>
        <br>- 2 sdm mentega\n</br>
        <br>- 100 gram bawang bombai\n</br>
        <br>- 500 gram kacang polong\n</br>
        <br>- 1 liter air kaldu daging\n</br>
        <br>- 100 ml krim kental\n</br>
        <br>- 1 sdt lada\n</br>
        <br>- 1 sdt garam\n</br>
        <br>- 2 lembar daun salam\n</br>
        <br>- 200 gram daging burger, iris bentuk dadu\n</br>
        <br>\n</br>
        <br>Pelengkap:\n</br>
        <br>- 250 gram roti Prancis, iris tipis serong</br>
        <br>- 1 sdm mentega\n</br>
        <br>- 2 siung bawang putih, parut\n</br>
        <br>- 1 sdt peterseli cincang\n</br>
        <br>\n</br>
        <br>Cara membuat:\n</br>
        <br>1. Campur mentega, bawang putih parut, dan peterseli, lalu aduk rata. Olesi roti Prancis dengan mentega berbumbu tadi, kemudian panggang dalam oven hingga kering. Sisihkan.\n</br>
        <br>2. Cairkan mentega, tumis bawang bombai sampai harum. Masukkan kacang polong, tambahkan air kaldu, beri lada, garam, dan daun salam, kemudian masak sampai mendidih.\n</br>
        <br>3. Masukkan kacang polong ke dalam blender, proses sampai halus. Tuang dalam panci, didihkan.\n</br>
        <br>4. Kecilkan api, lalu tambahkan krim kental dan daging burger. Masak kembali sampai mendidih.\n</br>
        <br>5. Sajikan sup selagi hangat dengan roti kering.\n</br>
    </string>
    <string name="artikel1">
        <br>Sejumlah imbauan telah dikeluarkan pemerintah sejak merebaknya virus corona. Selain menganjurkan cuci tangan secara berkala dengan air dan sabun serta penerapan pola hidup bersih dan sehat, masyarakat juga diminta untuk melakukan pembatasan jarak (social-physical distancing), serta tidak melakukan aktivitas di luar ruang jika tidak benar-benar mendesak. Beberapa perusahaan bahkan sudah menerapkan kebijakan agar karyawannya bisa bekerja di rumah atau work from home (WFH).\n</br>
        <br>\n</br>
        <br>Selama tinggal di rumah, baik itu sambil bekerja ataupun melakukan kegiatan lainnya, bukan berarti abai terhadap kesehatan. Menjaga kondisi tubuh dan menerapkan langkah pencegahan agar sistem imun terus terjaga tetap harus dilakukan. Berikut adalah beberapa cara yang bisa Anda praktikkan untuk menghindari diri dari serangan virus dan bakteri selama berada di rumah.\n</br>
        <br>1. Istirahat dan minum air putih yang cukup.\n</br>
        <br>Memiliki waktu istirahat yang cukup. Sangat penting untuk mempertahankan rutinitas tidur yang teratur agar hari-hari tetap berjalan sesuai pola normal. Pastikan Anda tidak begadang karena dapat berakibat buruk pada kesehatan Anda. Selain cukup istirahat, pastikan diri Anda selalu terhidrasi dengan baik lewat konsumsi air putih secara teratur dalam jumlah yang cukup.\n</br>
        <br>2. Makan sehat dan konsumsi vitamin.\n</br>
        <br>Banyak yang mengatakan bahwa tinggal di rumah selama pandemi COVID-19 adalah momen baik bagi tubuh untuk memperoleh gizi seimbang. Atur menu makanan Anda dan keluarga agar tetap memenuhi unsur-unsur zat gizi yang lengkap dalam jumlah yang sesuai, tidak lebih dan tidak kurang.
    Anda dapat menerapkan konsep “Piring Makanku” yang memenuhi kaidah gizi seimbang sebagai berikut:\n</br>
        <br>- Setengah porsi piring makan berupa sayur dan buah beraneka jenis dan warna.\n</br>
        <br>- Seperempat porsi piring makan diisi protein, baik hewani (telur/ayam/ikan/daging) maupun nabati (kacang-kacangan).\n</br>
        <br>- Seperempat porsi piring makan diisi karbohidrat kompleks (beras/biji-bijian).\n</br>
        <br>- Lengkapi dengan minyak sehat (zaitun/kedelai/jagung/kanola). Hindari minyak yang mengandung lemak jenuh atau kolesterol tinggi.\n</br>
        <br>- Konsumsi cukup air putih. Batasi konsumsi susu hingga 2 gelas per hari, jus sekitar satu gelas per hari, dan hindari minuman dengan kandungan gula tinggi.\n</br>
        <br> 3. Menjaga higienitas.\n</br>
        <br>Walaupun berada di dalam rumah untuk waktu yang cukup lama, Anda tetap harus memprioritaskan kebersihan diri dan lingkungan sekitar. Pastikan mencuci tangan dengan sabun dan air mengalir selama minimal 20 detik secara berkala, seperti sebelum dan setelah makan, setelah dari toilet, setelah beraktivitas, dan jika tangan kotor. Jika Anda batuk atau bersin, tutupi hidup dan mulut Anda dengan tisu. Setelahnya, segera buang tisu ke tempat sampah dan mencuci tangan hingga bersih.\n</br>
        <br>Kebersihan rumah juga harus dijaga. Bersihkan tempat-tempat yang memungkinkan kuman bersarang, seperti sela-sela lemari, belakang hiasan dinding, dan bagian dalam gorden. Bagi Anda yang memiliki area bekerja di rumah, jaga kebersihan lingkungan kerja seperti meja dan laptop secara berkala.\n</br>
        <br>Selain menjaga kesehatan dan kebugaran fisik, disarankan juga untuk memperhatikan kesehatan mental agar tetap dapat tenang dan berpikiran positif selama menghadapi pandemi COVID-19. Selektif terhadap informasi yang didapat dan pastikan hanya menerima dari sumber yang akurat dan dapat dipercaya. Berkomunikasilah selalu dengan keluarga dan sahabat untuk menanyakan kabar, memberikan dukungan, atau melakukan kegiatan bersama lewat video call. Mari tetap sehat dan semangat!\n</br>
    </string>
</resources>