<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity"
    android:background="@mipmap/logodiet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.com.fake.steam.LoginActivity"
        android:orientation="vertical"
        android:background="@color/trans">


        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_edittext_bg"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#ccc"
            android:hint="@string/first_name"
            android:layout_gravity="center_horizontal" />


        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@drawable/login_edittext_bg"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#CCC"
            android:hint="@string/last_name"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/login_edittext_bg"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#CCC"
            android:hint="@string/email_hint"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:background="@drawable/login_edittext_bg"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#CCC"
            android:hint="@string/password_hint"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:text="@string/create_account"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp" />

        <TextView
            android:id="@+id/loginaccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Already have an account? Sign In"
            android:paddingTop="10dp"
            android:textSize="20sp"
            android:textAlignment="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>